--- a/index.html
+++ b/index.html
@@ -42,7 +42,46 @@
             </div>
         </div>
     </div>
-    <div class="information"></div>
+    <div class="information">
+        <div class="informationText">
+            Some random information.
+        </div>
+        <div class="informationImages">
+            <div class="informationImageContainer">
+                <div class="informationImageBox"></div>
+                <div class="informationImageSubtext">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+            <div class="informationImageContainer">
+                <div class="informationImageBox"></div>
+                <div class="informationImageSubtext">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+            <div class="informationImageContainer">
+                <div class="informationImageBox"></div>
+                <div class="informationImageSubtext">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+            <div class="informationImageContainer">
+                <div class="informationImageBox"></div>
+                <div class="informationImageSubtext">
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="quoteText">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+            space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="quoteAuthor">
+            - Thor, God of Thunder
+        </div>
+    </div>
 </body>
 
 </html>
