Add call to action section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    <div class="information">
+    <div class="whiteContainer information">
         <div class="informationText">
             Some random information.
         </div>
@@ -80,6 +80,17 @@
         </div>
         <div class="quoteAuthor">
             - Thor, God of Thunder
+        </div>
+    </div>
+    <div class="whiteContainer signUp">
+        <div class="blueBox">
+            <div class="blueBoxMainText">
+                Call to action! It's time!
+                <div class="blueBoxSubtext">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <div class="signUpButtonBottom">Sign up</div>
         </div>
     </div>
 </body>
