Added footer and refactored sign up section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
             <div class="signUpButtonBottom">Sign up</div>
         </div>
     </div>
+    <div class="footer">
+        <div class="footerText">
+            DotoAdventures
+        </div>
+    </div>
 </body>
 
 </html>
